Add music section

--- a/public/modules/articles/views/create-article.client.view.html
+++ b/public/modules/articles/views/create-article.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="ArticlesController">
 	<div class="page-header">
-		<h1>New Article</h1>
+		<h1>Edit article</h1>
 	</div>
 	<div class="col-md-12">
 		<form name="articleForm" class="form-horizontal" data-ng-submit="create()" novalidate>
