--- a/public/modules/articles/views/edit-article.client.view.html
+++ b/public/modules/articles/views/edit-article.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="ArticlesController" data-ng-init="findOne()">
+<section data-ng-controller="ArticlesController" data-ng-init="findOne(article)">
 	<div class="page-header">
 		<h1>Edit Article</h1>
 	</div>
@@ -23,7 +23,7 @@
 						<p ng-show="articleForm.content.$error.required" class="text-danger">Content is required</p>
 					</div>
 				</div>
-				<div class="form-group">
+				<div data-ng-show="!article.editMode" class="form-group">
 					<input type="submit" value="Update" class="btn btn-default">
 				</div>
 				<div data-ng-show="error" class="text-danger">
