--- a/public/modules/articles/views/list-articles.client.view.html
+++ b/public/modules/articles/views/list-articles.client.view.html
@@ -3,16 +3,25 @@
 		<h1>Articles</h1>
 	</div>
 	<div class="list-group">
-		<a data-ng-repeat="article in articles" data-ng-href="#!/articles/{{article._id}}" class="list-group-item">
+		<div data-ng-repeat="article in articles" class="list-group-item">
 			<small class="list-group-item-text">
 				Posted on
 				<span data-ng-bind="article.created | date:'mediumDate'"></span>
 				by
 				<span data-ng-bind="article.user.displayName"></span>
 			</small>
-			<h4 class="list-group-item-heading" data-ng-bind="article.title"></h4>
-			<p class="list-group-item-text" data-ng-bind="article.content"></p>
-		</a>
+			
+			<edit-article-mode ng-if="article.editMode">
+			    <ng-include src="'modules/articles/views/edit-article.client.view.html'">
+			</edit-article-mode>
+
+			<div ng-if="!article.editMode">
+				<a href="#!/articles/{{article._id}}"><h4 class="list-group-item-heading" data-ng-bind="article.title"></h4></a>
+				<p class="list-group-item-text" data-ng-bind="article.content"></p>
+			</div>
+			<a data-ng-click="turnEditMode(article)" class="btn btn-warning"><i class="glyphicon glyphicon-edit"></i> {{article.buttonText}}</a>
+			<button class="btn btn-danger" data-ng-click="remove(article);"><i class="glyphicon glyphicon-trash"></i> Delete</button>
+		</div>
 	</div>
 	<div class="alert alert-warning text-center" data-ng-if="articles.$resolved && !articles.length">
 		No articles yet, why don't you <a href="/#!/articles/create">create one</a>?
